handle review comments
make new code compile on java8
ditch debug in Makefile